# olive-optimizer

./: .gitignore  compare_with_zemax.py  explore_merit.py  gradient.py  lm_lens_optimizer_plan.md  optimize.py  optimize_zmx.py  parse_zmx.py  push.sh  seidel_surrogate_physics_and_math (1).md  test_ynu_trace.py  vignetting_model.md
.claude/: settings.local.json
from_scratch/: Untitled  generate.py  optimize_direct.py  optimized_+-+-+-+.json  optimized_+-+-+-+.zmx  sweep_layouts.py  sweep_top20.md  visualize.py
from_scratch/gpu/: common.py  host.py  phase1_sweep.py  phase2_refine.py  write_zmx.py
lens_opt/: PROGRESS.md  constraints.py  pyproject.toml  visualize.py
lens_opt/examples/: cooke_constrained.py  cooke_multistart.py  cooke_triplet.py
lens_opt/optim/: lm.py  pack.py
lens_opt/tests/: test_forward_trace.py  test_gradients.py  test_lm_batched.py  test_lm_cooke.py  test_lm_singlet.py  test_lm_synthetic.py
lens_opt/tracer/: __init__.py  glass.py  intersect.py  merit.py  refract.py  sources.py  surfaces.py  system.py
projects/L_033/: F_019_opt.zmx  L_033_opt.zmx  optimize.py  system.py
zmx_files/: sc_dbga1_opt2.zmx  sc_dbga1_opt2_efl150.zmx  sc_dbga1_opt2_efl78.zmx  sc_dbga1_opt2_f4.zmx  sc_dbga1_opt2_full.zmx
